--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,10 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
+        <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle</p>
+        </div>
     </body>
     <footer>Todos los derechos reservados</footer>
 </html>
