Estamos probando el nuevo comando commit -a

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
-        <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle</p>
+        <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
         </div>
     </body>
     <footer>Todos los derechos reservados</footer>
