Estructura de la cabera

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,10 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
+        <div  class="container">
+            <div class="cabecera">Cabecera</div>
         <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
         </div>
+    </div>
     </body>
     <footer>Todos los derechos reservados</footer>
 </html>
