--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div  class="container">
-            <div class="cabecera">Cabecera</div>
+            <div class="cabecera">HyperBlog <span>Tú blog de confianza</span></div>
         <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
