--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
         <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
-        </div>
+        <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
+    </div>
     </body>
     <footer>Todos los derechos reservados</footer>
 </html>
