--- a/blogpost.html
+++ b/blogpost.html
@@ -5,12 +5,13 @@
     </head>
     <body>
         <div  class="container">
-            <div class="cabecera">HyperBlog <span>Tú blog de confianza</span></div>
+            <div class="cabecera">HyperBlog <span>Tú blog Maestro</span></div>
         <div class="miNuevoDIV">
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
         <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
-        </div>
+        <p>Pensando en ser desarrolladora es muy divertido</p>    
+    </div>
     </div>
     </body>
     <footer>Todos los derechos reservados</footer>
