--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingeniera de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
         <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
-        <p>Pensando en ser desarrolladora es muy divertido, con colaboración de Desarrollador II y no he podido configurar otro usuario. Otro intento. Noooooooooo</p>    
+        <p>Pensando en ser desarrolladora es muy divertido, con colaboración de Desarrollador II y no he podido configurar otro usuario. Otro intento. Noooooooooo nadaaaaaaaaa</p>    
     </div>
     </div>
     </body>
