Actualizando la Cabecera Se realiza modificación de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF8">
         <title>Mi blogPost</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
@@ -12,7 +13,7 @@
         <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
         <p>Pensando en ser desarrolladora es muy divertido</p>    
     </div>
-    </div>
     </body>
-    <footer>Todos los derechos reservados</footer>
+    <footer><div class="footer">Hecho con Amor =)</div></footer>
+</div>
 </html>
