--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
         <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
         <p class="miParrafo"></pclass>Pensando en ser desarrolladora, es muy divertido, con colaboraci&oacute;n de Desarrollador II.</p>    
     <div class="equipo"><picture>
-        <img  src="imagenes/equipo.jpg">
+        <img  src="https://cutt.ly/wx1yGU8">
     </picture>
 </div>
     </div>
