trabajando con stash creando ramas

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
         <h1 class="miNombre">Diana Marcela Valencia</h1>
         <p class="miParrafo">Hola soy Ingen&iacute;era de Sistemas Egresada de la Universidad del valle.<span class="resaltar"> Vamos aprender Git</span></p>
         <p class="miParrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, eos nihil consectetur quisquam accusantium vel asperiores ut sint quasi nulla rem veniam non, dolorem necessitatibus totam deleniti, amet sunt dolore.</p>    
-        <p class="miParrafo"></pclass>Pensando en ser desarrolladora, es muy divertido, con colaboraci&oacute;n de Desarrollador II.</p>    
+        <p class="miParrafo">Pensando en ser desarrolladora, es muy divertido, con colaboraci&oacute;n de Desarrollador II.</p>    
     <div class="equipo"><picture>
         <img  src="https://cutt.ly/wx1yGU8">
     </picture>
